// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function_expression.js - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
(function() {}).length
typeof (function() {});
export default (function() {})();
(function() {})()\`\`;
(function() {})\`\`;
new (function() {});
(function() {});
a = function f() {} || b;
(function() {} && a);
a + function() {};
new function() {};

=====================================output=====================================
(function () {}.length);
typeof function () {};
export default (function () {})();
(function () {})()\`\`;
(function () {})\`\`;
new (function () {})();
(function () {});
a = function f() {} || b;
(function () {} && a);
a + function () {};
new (function () {})();

================================================================================
`;

exports[`function_expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(function() {}).length
typeof (function() {});
export default (function() {})();
(function() {})()\`\`;
(function() {})\`\`;
new (function() {});
(function() {});
a = function f() {} || b;
(function() {} && a);
a + function() {};
new function() {};

=====================================output=====================================
(function () {}.length);
typeof function () {};
export default (function () {})();
(function () {})()\`\`;
(function () {})\`\`;
new (function () {})();
(function () {});
a = function f() {} || b;
(function () {} && a);
a + function () {};
new (function () {})();

================================================================================
`;

exports[`issue-10277.js - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
(fold => fold)(fmap => algebra => function doFold(v) {return algebra(fmap(doFold)(v))})

=====================================output=====================================
((fold) => fold)(
  (fmap) => (algebra) =>
    function doFold(v) {
      return algebra(fmap(doFold)(v));
    }
);

================================================================================
`;

exports[`issue-10277.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(fold => fold)(fmap => algebra => function doFold(v) {return algebra(fmap(doFold)(v))})

=====================================output=====================================
((fold) => fold)(
  (fmap) => (algebra) =>
    function doFold(v) {
      return algebra(fmap(doFold)(v));
    },
);

================================================================================
`;
